--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ section{
     border: 1px solid #000;
     border-radius: 10px;
     padding: 0.6em;
+    width:80%;
 }
 .section-container .box-1 .box-form .form-img img{
     width: 60px;
