--- a/style.css
+++ b/style.css
@@ -88,7 +88,9 @@ section{
     margin:3em 2em;
     border: 1px solid #000;
     border-radius: 10px;
-    padding: 2em;
+    padding: 1em;
+    padding-left: 0;
+    padding-right: 2em;
 }
 .section-container .box-1 .box-form .form-img img{
     width: 60px;
