--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ section{
     margin:3em 2em;
     border: 1px solid #000;
     border-radius: 10px;
+    padding: 0.4em;
+}
+.section-container .first-form{
     padding: 1em;
     padding-left: 0;
     padding-right: 2em;
